[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/font/Arcadepix Plus.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://offline_levels/level2/letter.tscn" type="PackedScene" id=2]
[ext_resource path="res://offline_levels/level2/manager.gd" type="Script" id=3]
[ext_resource path="res://offline_levels/level2/blank.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/font/button.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[node name="level2" type="Node2D"]

[node name="clue" type="Label" parent="."]
margin_left = 151.0
margin_top = 250.0
margin_right = 1151.0
margin_bottom = 450.0
rect_min_size = Vector2( 1000, 150 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "CLUE"
autowrap = true

[node name="manager" type="Node2D" parent="."]
script = ExtResource( 3 )
letter_scene = ExtResource( 2 )
blank_scene = ExtResource( 4 )

[node name="blank_container" type="GridContainer" parent="."]
margin_left = 45.0
margin_top = 100.0
margin_right = 1240.0
margin_bottom = 180.0
rect_clip_content = true
custom_constants/hseparation = 5
columns = 15

[node name="blank" parent="blank_container" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 75.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
text = "_"

[node name="blank2" parent="blank_container" instance=ExtResource( 4 )]
margin_left = 80.0
margin_top = 0.0
margin_right = 155.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
text = "_"

[node name="blank3" parent="blank_container" instance=ExtResource( 4 )]
margin_left = 160.0
margin_top = 0.0
margin_right = 235.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
text = "_"

[node name="blank4" parent="blank_container" instance=ExtResource( 4 )]
margin_left = 240.0
margin_top = 0.0
margin_right = 315.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
text = "_"

[node name="blank5" parent="blank_container" instance=ExtResource( 4 )]
margin_left = 320.0
margin_top = 0.0
margin_right = 395.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
text = "_"

[node name="blank6" parent="blank_container" instance=ExtResource( 4 )]
margin_left = 400.0
margin_top = 0.0
margin_right = 475.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
text = "_"

[node name="blank7" parent="blank_container" instance=ExtResource( 4 )]
margin_left = 480.0
margin_top = 0.0
margin_right = 555.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
text = "_"

[node name="blank8" parent="blank_container" instance=ExtResource( 4 )]
margin_left = 560.0
margin_top = 0.0
margin_right = 635.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
text = "_"

[node name="blank9" parent="blank_container" instance=ExtResource( 4 )]
margin_left = 640.0
margin_top = 0.0
margin_right = 715.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
text = "_"

[node name="blank10" parent="blank_container" instance=ExtResource( 4 )]
margin_left = 720.0
margin_top = 0.0
margin_right = 795.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
text = "_"

[node name="blank11" parent="blank_container" instance=ExtResource( 4 )]
margin_left = 800.0
margin_top = 0.0
margin_right = 875.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
text = "_"

[node name="blank12" parent="blank_container" instance=ExtResource( 4 )]
margin_left = 880.0
margin_top = 0.0
margin_right = 955.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
text = "_"

[node name="blank13" parent="blank_container" instance=ExtResource( 4 )]
margin_left = 960.0
margin_top = 0.0
margin_right = 1035.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
text = "_"

[node name="blank14" parent="blank_container" instance=ExtResource( 4 )]
margin_left = 1040.0
margin_top = 0.0
margin_right = 1115.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
text = "_"

[node name="blank15" parent="blank_container" instance=ExtResource( 4 )]
margin_left = 1120.0
margin_top = 0.0
margin_right = 1195.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
text = "_"

[node name="letter_container" type="GridContainer" parent="."]
margin_left = 45.0
margin_top = 500.0
margin_right = 1240.0
margin_bottom = 580.0
custom_constants/hseparation = 5
columns = 15

[node name="letter1" parent="letter_container" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 75.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )

[node name="letter2" parent="letter_container" instance=ExtResource( 2 )]
margin_left = 80.0
margin_top = 0.0
margin_right = 155.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )

[node name="letter3" parent="letter_container" instance=ExtResource( 2 )]
margin_left = 160.0
margin_top = 0.0
margin_right = 235.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )

[node name="letter4" parent="letter_container" instance=ExtResource( 2 )]
margin_left = 240.0
margin_top = 0.0
margin_right = 315.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )

[node name="letter5" parent="letter_container" instance=ExtResource( 2 )]
margin_left = 320.0
margin_top = 0.0
margin_right = 395.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )

[node name="letter6" parent="letter_container" instance=ExtResource( 2 )]
margin_left = 400.0
margin_top = 0.0
margin_right = 475.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )

[node name="letter7" parent="letter_container" instance=ExtResource( 2 )]
margin_left = 480.0
margin_top = 0.0
margin_right = 555.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )

[node name="letter8" parent="letter_container" instance=ExtResource( 2 )]
margin_left = 560.0
margin_top = 0.0
margin_right = 635.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )

[node name="letter9" parent="letter_container" instance=ExtResource( 2 )]
margin_left = 640.0
margin_top = 0.0
margin_right = 715.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )

[node name="letter10" parent="letter_container" instance=ExtResource( 2 )]
margin_left = 720.0
margin_top = 0.0
margin_right = 795.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )

[node name="letter11" parent="letter_container" instance=ExtResource( 2 )]
margin_left = 800.0
margin_top = 0.0
margin_right = 875.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )

[node name="letter12" parent="letter_container" instance=ExtResource( 2 )]
margin_left = 880.0
margin_top = 0.0
margin_right = 955.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )

[node name="letter13" parent="letter_container" instance=ExtResource( 2 )]
margin_left = 960.0
margin_top = 0.0
margin_right = 1035.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )

[node name="letter14" parent="letter_container" instance=ExtResource( 2 )]
margin_left = 1040.0
margin_top = 0.0
margin_right = 1115.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )

[node name="letter15" parent="letter_container" instance=ExtResource( 2 )]
margin_left = 1120.0
margin_top = 0.0
margin_right = 1195.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )

[node name="submit" type="Button" parent="."]
margin_left = 725.0
margin_top = 619.0
margin_right = 1025.0
margin_bottom = 682.0
rect_min_size = Vector2( 300, 63 )
custom_fonts/font = ExtResource( 5 )
text = "SUBMIT"

[node name="clear" type="Button" parent="."]
margin_left = 292.0
margin_top = 619.0
margin_right = 592.0
margin_bottom = 682.0
rect_min_size = Vector2( 300, 63 )
custom_fonts/font = ExtResource( 5 )
text = "CLEAR"

[node name="score_board" type="Label" parent="."]
margin_left = 51.0
margin_top = 31.0
margin_right = 351.0
margin_bottom = 94.0
rect_min_size = Vector2( 300, 50 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Score:     / 5"
autowrap = true

[node name="score" type="Label" parent="."]
margin_left = 195.0
margin_top = 32.0
margin_right = 235.0
margin_bottom = 82.0
rect_min_size = Vector2( 40, 50 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
autowrap = true

[connection signal="pressed" from="submit" to="manager" method="_on_submit_pressed"]
[connection signal="pressed" from="clear" to="manager" method="_on_clear_pressed"]
